--- a/package.json
+++ b/package.json
@@ -12,16 +12,32 @@
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "backbone": "^1.3.3",
+    "babel-preset-react": "^6.5.0",
+    "bootstrap-loader": "^1.0.10",
+    "bootstrap-sass": "^3.3.6",
+    "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-config-xo": "^0.14.1",
     "eslint-config-xo-space": "^0.13.0",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-livereload": "^3.8.1",
+    "gulp-webpack": "^1.5.0",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.2.4",
+    "node-sass": "^3.7.0",
     "promise": "^7.1.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "eslint-plugin-react": "^5.1.1"
   }
 }
