--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,8 +4,8 @@
   "manifest_version": 2,
   "description": "Codepen Injector",
   "icons": {
-    "16": "images/icon-16.png",
-    "128": "images/icon-128.png"
+    "16": "images/icons-black/icon-16.png",
+    "128": "images/icons-black/icon-128.png"
   },
   "permissions": [
     "tabs",
@@ -21,8 +21,8 @@
   },
   "browser_action": {
     "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "19": "images/icons-black/icon-19.png",
+      "38": "images/icons-black/icon-38.png"
     },
     "default_title": "Codepen Injector",
     "default_popup": "popup.html"
